<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/specific_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_main"
            android:visibility="gone">

            <TextView
                style="@style/SpecificBarTextStyle"
                android:gravity="center_horizontal"
                android:text="@string/product_id" />

            <EditText
                android:id="@+id/edit_specific_id"
                style="@style/SpecificBarEditTextStyle"
                android:hint="@string/qustion_mark"
                android:inputType="number" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/accept_number_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_main"
                android:src="@drawable/ic_done"
                android:text="@string/price_units" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_view_pet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_activity" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_main"
        android:src="@drawable/ic_add" />

</RelativeLayout>
